tests/compilefail91.out
[1mtests/compilefail91.pas:5:16: [0m[1m[91merror:[0m Invalid real number format: 3.1415eq
     5 | 	r := 3.1415eq-03;

